Starting work on API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ add_executable(funs-server ${SRC_LIST})
 target_link_libraries(funs-server "bsoncxx.so")
 target_link_libraries(funs-server "mongocxx.so")
 target_link_libraries(funs-server "restbed.so")
+target_link_libraries(funs-server "pthread.so")
