--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 include_directories("../restbed/distribution/include")
 include_directories("/usr/local/include/bsoncxx/v_noabi")
 include_directories("/usr/local/include/mongocxx/v_noabi")
+include_directories("./spdlog/include")
 link_directories("../restbed/distribution/library")
 add_library(restbed SHARED IMPORTED)
 add_library(mongocxx SHARED IMPORTED)
